--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="valentineBox">
         <h2 id="valentineText"></h2>
         <div id="buttons">
-            <button id="yesButton" onclick="alert('Horeee, tanggal 14 jalan ya❤️')">Mauuu</button>
+            <button id="yesButton" onclick="alert('Horeee, tanggal 14 kita jalan ya❤️')">Mauuu</button>
             <button id="noButton" onclick="growYesButton()">GA</button>
         </div>
     </div>
@@ -76,7 +76,7 @@
                 yesButton.style.width = '100vw';
                 yesButton.style.height = '100vh';
                 yesButton.style.fontSize = '50px';
-                yesButton.innerText = "HAHAHA HARUS MAU! ❤️";
+                yesButton.innerText = "HAHA HARUS MAU! ❤️";
                 noButton.style.display = 'none';
             }
         }
